# rustdesk-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
deploy/: Caddyfile.example  nginx.conf.example
rendezvous-shim/: Dockerfile  main.rs  rustdesk-rendezvous-dnat.service
src/: auth.rs  cli.rs  config.rs  db.rs  main.rs
src/api/: ab.rs  device.rs  group.rs  misc.rs  mod.rs  user.rs
tests/: e2e.sh
