[package]
name = "rustdesk-api"
version = "0.1.0"
edition = "2021"
description = "Minimal RustDesk API server: every registered workstation shows up in every user's address book"
license = "AGPL-3.0-only"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
# Declared directly so the `getrandom` feature is enabled on the same rand_core
# instance argon2's password-hash uses; without it there is no `OsRng`.
rand_core = { version = "0.6", features = ["getrandom"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7"
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
